# seL4_libs-vbtalloc-extension

./: .gitmodules  CMakeLists.txt  README.md
libsel4allocman/: CMakeLists.txt  README.md
libsel4allocman/include/allocman/: allocman.h  capbuddy.h  vbt.h  vbtutils.h
libsel4allocman/include/allocman/cspace/: cspace.h  simple1level.h  single_level.h  two_level.h  vka.h
libsel4allocman/include/allocman/utspace/: split.h  twinkle.h  utspace.h  vka.h
libsel4allocman/include/allocman/vbt/: arch32.h  arch64.h  interface.h
libsel4allocman/src/: allocman.c  arch32.c  arch64.c  bootstrap.c  capbuddy.c  vbt.c  vbtutils.c  vka.c
libsel4allocman/src/cspace/: single_level.c
libsel4allocman/src/utspace/: split.c
libsel4muslcsys/: CMakeLists.txt
libsel4platsupport/src/: common.c  io.c  timer.c
libsel4platsupport/src/arch/x86/: io_port_ops.c
libsel4utils/src/: iommu_dma.c  mapping.c  page_dma.c
libsel4utils/src/vspace/: vspace.c
libsel4vka/: CMakeLists.txt  README.md
libsel4vka/include/vka/: object.h  vka.h
